--- a/src/components/MoviesList/movies-list.css
+++ b/src/components/MoviesList/movies-list.css
@@ -1,11 +1,17 @@
 .movies-list {
+  width: 95%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 2rem;
   padding: 0;
+  margin: 30px auto;
 }
 .movies-list_pagination {
   display: block;
   width: fit-content;
   margin: 0 auto;
+}
+
+@media (max-width: 425px) {
 }
